*Se agrega un DT y repo para las news *Se agregan loos viewModel y sus respectivas factorias *Se configuran los adapter para que muestren las informacioon en los click *Se crean interfaces para los comportamientos de los items en los adapters *Se agregan los xml de cada adapter y de cada dialog *Se agregan bootones para agregar *Se ajustan los iconos y colores de la app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,9 +11,13 @@
     <string name="fragment_login_title">Usuario</string>
 
     <string name="fragment_login_user_editText">Usuario</string>
+    <string name="fragment_login_alias_editText">Alias</string>
     <string name="fragment_password_user_editText">Contraseña</string>
     <string name="fragment_email_user_editText">Correo</string>
     <string name="fragment_login_button">Iniciar Sesion</string>
+
+    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris.</string>
+
 
 
 
